# cricket-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
src/: app.rs  cricbuzz_api.rs  main.rs
src/display/: ui.rs
src/event/: events.rs  key.rs
tests/data/: cricbuzz_home_four_live.txt  cricbuzz_home_no_live.txt  cricbuzz_odi_first_innings.json  cricbuzz_odi_scorecard_first_innings.txt  cricbuzz_odi_scorecard_second_innings.txt  cricbuzz_odi_second_innings.json  cricbuzz_scorecard_four_innings.txt  cricbuzz_scorecard_one_innings.txt  cricbuzz_scorecard_three_innings.txt  cricbuzz_scorecard_two_innings.txt  cricbuzz_test_first_innings.json  cricbuzz_test_fourth_innings.json  cricbuzz_test_scorecard_first_innings.txt  cricbuzz_test_scorecard_fourth_innings.txt  cricbuzz_test_scorecard_second_innings.txt  cricbuzz_test_second_innings.json
tests/snapshots/: cricket_rs__app__tests__parse_scorecard_four_innings.snap  cricket_rs__app__tests__parse_scorecard_four_innings.snap.new  cricket_rs__app__tests__parse_scorecard_one_innings.snap  cricket_rs__app__tests__parse_scorecard_three_innings.snap  cricket_rs__app__tests__parse_scorecard_two_innings.snap  cricket_rs__display__ui__test__odi_first_inngs_draw_ui.snap  cricket_rs__display__ui__test__odi_second_inngs_draw_ui.snap  cricket_rs__display__ui__test__test_first_inngs_draw_ui.snap  cricket_rs__display__ui__test__test_fourth_inngs_draw_ui.snap  cricket_rs__display__ui__test__test_second_inngs_draw_ui.snap
