[package]
name = "cricket-rs"
version = "0.1.0"
authors = ["pmk21 <prithvikrishna49@gmail.com>"]
edition = "2018"
homepage = "https://github.com/pmk21/cricket-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
crossterm = "0.19"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }

[dev-dependencies]
insta = "1.7.0"

[profile.release]
lto = true