[package]
name = "cricket-rs"
version = "0.1.1"
authors = ["pmk21 <prithvikrishna49@gmail.com>"]
edition = "2018"
homepage = "https://github.com/pmk21/cricket-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["cargo"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
crossterm = "0.25"
tui = { version = "0.19", default-features = false, features = ['crossterm'] }

[dev-dependencies]
insta = "1.23.0"

[profile.release]
lto = true
